--- a/2018.html
+++ b/2018.html
@@ -53,7 +53,7 @@
 	    		</div>
 	    		<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	    		<div class="col-sm-5"></div>	
@@ -113,7 +113,7 @@
 	    		</div>
 	    		<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	    		<div class="col-sm-5"></div>	
@@ -133,7 +133,7 @@
 	    		</div>
 	    		<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	    		<div class="col-sm-5"></div>	
@@ -187,7 +187,7 @@
 				<div class="col-sm-5"></div>
 				<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	   		 	<div class="col-sm-5">
@@ -207,7 +207,7 @@
 				<div class="col-sm-5"></div>
 				<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	   		 	<div class="col-sm-5">
@@ -247,7 +247,7 @@
 				<div class="col-sm-5"></div>
 				<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	   		 	<div class="col-sm-5">
@@ -267,7 +267,7 @@
 				<div class="col-sm-5"></div>
 				<div class="col-sm-2">
 	    			<center>
-	    			<img src="images/unclear.png" class="clear">
+	    			<img src="images/clear.png" class="clear">
 	    			</center>
 	    		</div>
 	   		 	<div class="col-sm-5">
